tests/base/invalid/DefiniteAssign_CompileFail_4.whiley
import * from whiley.lang.*

void System::f(string a):
    sys.out.println(a)

void ::main(System.Console sys):
    sys.out.println("HELLO")
    x.f("WORLD")
